--- a/overlay/packages/apps/DU-Changelog/res/layout/mainactivity.xml
+++ b/overlay/packages/apps/DU-Changelog/res/layout/mainactivity.xml
@@ -36,7 +36,6 @@
         android:layout_below="@+id/button"
         android:layout_alignParentEnd="true"
         android:layout_marginTop="21dp"
-        android:layout_alignParentStart="true"
-        android:visibility="gone" />
+        android:layout_alignParentStart="true" />
     
 </RelativeLayout>
